--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 <meta name="msapplication-TileColor" content="#ffffff">
 <meta name="msapplication-TileImage" content="/favicons/ms-icon-144x144.png">
 <meta name="theme-color" content="#ffffff">
+<script src="Scripts/script.js"></script>
 </head>
 <body>
     <!DOCTYPE html>
